manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagementui-service
spec:
  type: NodePort
  selector:
    app: ordermanagementui
  ports:
    - port: 3000
      targetPort: 80
      protocol: TCP
