manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ordermanagement-ui-ingress
  #  namespace: ordermanagement-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            #path: /(.*) #path: /ui(/|$)(.*)
            # pathType: Prefix
            backend:
              serviceName: ordermanagementui-service
              servicePort: 3000
